completed except bookly

--- a/assignments/1. counter/index.html
+++ b/assignments/1. counter/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="main.js" defer></script>
     <title>Basic Counter App</title>
   </head>
-  <body></body>
+  <body>
+    <p class="number">0</p>
+    <button class="inc">Increment</button>
+    <button class="dec">Decrement</button>
+    <button class="reset">Reset</button>
+  </body>
 </html>
