--- a/assignments/2. forms/index.html
+++ b/assignments/2. forms/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="main.js" defer></script>
     <title>Forms</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Sign Up</h1>
+    <input type="text" class="name" placeholder="Enter your Full Name">
+    <input type="email" class="email" placeholder="Enter your Email">
+    <input type="password" class="password" placeholder="Enter your password">
+    <button class="submit">Submit</button>
+  </body>
 </html>
