--- a/assignments/2. forms/index.html
+++ b/assignments/2. forms/index.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Forms</title>
   </head>
   <body>
     <h1>Sign Up</h1>
-    <input type="text" class="name" placeholder="Enter your Full Name">
-    <input type="email" class="email" placeholder="Enter your Email">
-    <input type="password" class="password" placeholder="Enter your password">
-    <button class="submit">Submit</button>
+    <div class="form">
+      <p>NAME</p>
+      <input type="text" class="name" placeholder="Enter your Full Name">
+      <div class='ipsum'></div>
+      <p>EMAIL</p>
+      <input type="email" class="email" placeholder="Enter your Email">
+      <p>PASSWORD</p>
+      <input type="password" class="password" placeholder="Enter your Password">
+      <button class="submit">Submit</button>
+    </div>
+    <script src="main.js" ></script>
   </body>
+
 </html>
+l
