--- a/assignments/1. counter/index.html
+++ b/assignments/1. counter/index.html
@@ -8,7 +8,7 @@
     <title>Basic Counter App</title>
   </head>
   <body>
-    <p class="number">0</p>
+    <p class="number"></p>
     <button class="inc">Increment</button>
     <button class="dec">Decrement</button>
     <button class="reset">Reset</button>
