--- a/assignments/5 - bookly/index.html
+++ b/assignments/5 - bookly/index.html
@@ -22,10 +22,10 @@
 	    	</ul>
 	    </div>
 	    <form id="add-book">
-        <input type="checkbox" id="hide" />
+        <input type="checkbox" id="hide"/>
         <label for="hide">Hide all books</label>
-	    	<input type="text" placeholder="Add a book..." />
-	    	<button>Add</button>
+	    	<input type="text" class='addbook' placeholder="Add a book..." />
+	    	<button class="addbtn">Add</button>
 	    </form>
 		</div>
     <script src="app.js"></script>		
